crates/plotnik-tests/tests/03-analyze/alternations/mixed_inner_alternation_only_reported.txt
Q = [
  A: [
    B: (b)
    (c)
  ]
]
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:4:5
  |
3 |     B: (b)
  |     - labeled alternative here
4 |     (c)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
